Fixed image overflow issue

--- a/sass/article.scss
+++ b/sass/article.scss
@@ -64,6 +64,9 @@ figcaption.title {
     font-weight: bold;
 }
 
+figure img {
+    max-width: 100%;
+}
 
 .img-center {
     display: block;
